# BC-WireGuard_ESP32

./: .gitmodules  README.md  sdkconfig.defaults
components/ESP32_Task_Monitor/: CMakeLists.txt
components/ESP32_Task_Monitor/main/: CMakeLists.txt  Kconfig.projbuild
components/ESP32_Task_Monitor/src/: task_monitor.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
src/: task_monitor.c
